# juce-project-template

./: .clang-format  .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  .prettierignore  .prettierrc  .prettierrc.example  AGENTS.md  AUDIT_ACTION_ITEMS.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_FINDINGS.md  AUDIT_README.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  BEST_PRACTICES_RESEARCH.md  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CUSTOMIZATION.md  DEVELOPMENT_WORKFLOW.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_ISSUES.md  MERGE_CHECKLIST.md  PROJECT_VALIDATION_REPORT.md  QUICKSTART.md  README.md  README_AUDIT.md  REFACTORING_CHECKLIST.md  REFACTORING_PLAN.md  SECURITY.md  package-lock.json  package.json  plugin-development-roadmap.md  test-format.cpp
.github/: copilot-instructions.md  dependabot.yml
.github/chatmodes/: .markdownlint.jsonc  agent-creator-doer.chatmode.md  git.chatmode.md  project-developer.chatmode.md  tech-writer.chatmode.md
.github/instructions/: README.md  cmake-config.instructions.md  cpp-source.instructions.md  documentation.instructions.md  github-config.instructions.md  json-config.instructions.md  scripts.instructions.md  workflows.instructions.md
.github/prompts/: architecture-planning.prompt.md  implementation-framework.prompt.md  pr-check-comments-evaluate-and-adress-cleanup.prompt.md  pr-check-comments-evaluate-and-adress.prompt.md  pr-comments-fix-cleanup.prompt.md  pr-comments-fix.prompt.md  research-phase.prompt.md  validation-testing.prompt.md
.github/workflows/: build.yml  ci.yml  codeql.yml  release.yml
build-release/: Makefile
docs/: CI.md  CI_CD_AUDIT.md  CI_CD_IMPROVEMENTS_SUMMARY.md  CI_GUIDE.md  CI_IMPLEMENTATION.md  CI_OPTIMIZATION_PLAN.md  CI_README.md  CI_STRATEGY.md  CI_SUMMARY.md  CI_TRIGGERS.md  CLAP_FORMAT_COMPARISON.md  CLAP_IMPLEMENTATION_GUIDE.md  CLAP_INTEGRATION_RESEARCH.md  CLAP_QUICK_REFERENCE.md  CLAP_RESEARCH_SUMMARY.md  COPILOT_INSTRUCTIONS.md  CROSS_PLATFORM_BUILDS.md  DEPENDENCY_UPDATE_NOTES.md  DESIGN_DECISIONS.md  FORMATTING.md  LOCAL_CI_TESTING.md  MODERNIZATION_SUMMARY.md  NINJA.md  PLUGIN_FORMATS.md  README.md  REVIEW_RESPONSES.md  REVIEW_RESPONSES_PR47.md  REVIEW_RESPONSE_SUMMARY.md  REVIEW_RESPONSE_SUMMARY_PR47.md  VERSION_MANAGEMENT.md  VSCODE_INTEGRATION.md
docs/C++/: basics-C++.md
docs/JUCE/: basics-JUCE.md
docs/JUCE-AudioPluginHost/: basics-JUCE-AudioPluginHost.md
docs/LLVM/: WINDOWS_LLVM_SETUP.md  basics-LLVM.md
docs/archive/ci-planning/: CI_OPTIMIZATION_PLAN.md  CI_STRATEGY.md  CI_STRATEGY_REVIEW.md  CI_SUMMARY.md  CI_TRIGGERS.md  README.md
docs/clang/: basics-clang.md
docs/cmake/: basics-cmake.md
docs/husky/: husky-basics.md
docs/ninja/: basics-ninja.md
scripts/: build-ninja.bat  build-ninja.sh  configure-ninja.bat  configure-ninja.sh  format-cpp.sh  metadata-utils.sh  run-standalone.bat  run-standalone.sh  test-builds.sh  utils.sh  validate-builds.sh  validate-setup.sh
src/: DSPJuceAudioProcessor.cpp  DSPJuceAudioProcessor.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h
